# alumni_project

./: .gitignore  PGdegrees.json  PGuniversities.txt  PGuniversities_replace.json  PGuniversities_replace_old.json  UGdegrees.json  UGuniversities.txt  UGuniversities_replace.json  UGuniversities_replace_old.json  __init__.py  analysis.py  cleaning.py  dashboard.ipynb  dashboard.py  employment_history.json  linkedin_scrape.py  make_html.py  pyproject.toml  requirements.txt  scrape.py  students_replace.xlsx  students_replace_BACKUP.xlsx  uni_locations.json  uni_locs.json  universities_replace.json  utils.py
input/: style.css
output/: dashboard.html
