[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "alumni_project"
version = "0.0.1"
authors = [
  { name="Ioana Duta", email="ioana.duta@ndcn.ox.ac.uk" },
]
description = "A project exploring alumni data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/XXXX"
"Bug Tracker" = "https://github.com/XXXX/issues"